@@ -310,6 +310,18 @@
       </varlistentry>
 
       <varlistentry>
+        <term><varname>journal.storage</varname></term>
+        <listitem>
+          <para>Used by
+          <citerefentry><refentrytitle>systemd-journald</refentrytitle><manvolnum>8</manvolnum></citerefentry>
+          to determine where to store journal files, see
+          <citerefentry><refentrytitle>journald.conf</refentrytitle><manvolnum>5</manvolnum></citerefentry> for details.</para>
+
+          <xi:include href="version-info.xml" xpointer="v256"/>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
         <term><varname>vmm.notify_socket</varname></term>
         <listitem>
           <para>Configures an
